@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,16 +16,19 @@
 
 package org.springframework.format.datetime.standard;
 
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.time.MonthDay;
 import java.time.OffsetDateTime;
 import java.time.OffsetTime;
+import java.time.YearMonth;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAccessor;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Set;
 
 import org.springframework.context.support.EmbeddedValueResolutionSupport;
@@ -40,26 +43,25 @@ import org.springframework.util.StringUtils;
  * JSR-310 <code>java.time</code> package in JDK 8.
  *
  * @author Juergen Hoeller
+ * @author Sam Brannen
+ * @author Kazuki Shimizu
  * @since 4.0
  * @see org.springframework.format.annotation.DateTimeFormat
  */
 public class Jsr310DateTimeFormatAnnotationFormatterFactory extends EmbeddedValueResolutionSupport
 		implements AnnotationFormatterFactory<DateTimeFormat> {
 
-	private static final Set<Class<?>> FIELD_TYPES;
-
-	static {
-		// Create the set of field types that may be annotated with @DateTimeFormat.
-		Set<Class<?>> fieldTypes = new HashSet<>(8);
-		fieldTypes.add(LocalDate.class);
-		fieldTypes.add(LocalTime.class);
-		fieldTypes.add(LocalDateTime.class);
-		fieldTypes.add(ZonedDateTime.class);
-		fieldTypes.add(OffsetDateTime.class);
-		fieldTypes.add(OffsetTime.class);
-		FIELD_TYPES = Collections.unmodifiableSet(fieldTypes);
-	}
-
+	// Create the set of field types that may be annotated with @DateTimeFormat.
+	private static final Set<Class<?>> FIELD_TYPES = Set.of(
+				Instant.class,
+				LocalDate.class,
+				LocalTime.class,
+				LocalDateTime.class,
+				ZonedDateTime.class,
+				OffsetDateTime.class,
+				OffsetTime.class,
+				YearMonth.class,
+				MonthDay.class);
 
 	@Override
 	public final Set<Class<?>> getFieldTypes() {
@@ -94,7 +96,17 @@ public class Jsr310DateTimeFormatAnnotationFormatterFactory extends EmbeddedValu
 	@SuppressWarnings("unchecked")
 	public Parser<?> getParser(DateTimeFormat annotation, Class<?> fieldType) {
 		DateTimeFormatter formatter = getFormatter(annotation, fieldType);
-		return new TemporalAccessorParser((Class<? extends TemporalAccessor>) fieldType, formatter);
+
+		List<String> resolvedFallbackPatterns = new ArrayList<>();
+		for (String fallbackPattern : annotation.fallbackPatterns()) {
+			String resolvedFallbackPattern = resolveEmbeddedValue(fallbackPattern);
+			if (StringUtils.hasLength(resolvedFallbackPattern)) {
+				resolvedFallbackPatterns.add(resolvedFallbackPattern);
+			}
+		}
+
+		return new TemporalAccessorParser((Class<? extends TemporalAccessor>) fieldType,
+				formatter, resolvedFallbackPatterns.toArray(new String[0]), annotation);
 	}
 
 	/**
