@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,20 +19,18 @@ package org.springframework.jms.listener.adapter;
 import java.io.ByteArrayInputStream;
 import java.io.Serializable;
 
-import javax.jms.BytesMessage;
-import javax.jms.InvalidDestinationException;
-import javax.jms.JMSException;
-import javax.jms.Message;
-import javax.jms.MessageProducer;
-import javax.jms.ObjectMessage;
-import javax.jms.Queue;
-import javax.jms.QueueSender;
-import javax.jms.QueueSession;
-import javax.jms.Session;
-import javax.jms.TextMessage;
-
+import jakarta.jms.BytesMessage;
+import jakarta.jms.InvalidDestinationException;
+import jakarta.jms.JMSException;
+import jakarta.jms.Message;
+import jakarta.jms.MessageProducer;
+import jakarta.jms.ObjectMessage;
+import jakarta.jms.Queue;
+import jakarta.jms.QueueSender;
+import jakarta.jms.QueueSession;
+import jakarta.jms.Session;
+import jakarta.jms.TextMessage;
 import org.junit.jupiter.api.Test;
-import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.jms.support.converter.MessageConversionException;
@@ -51,7 +49,7 @@ import static org.mockito.Mockito.verify;
  * @author Juergen Hoeller
  * @author Chris Beams
  */
-public class MessageListenerAdapterTests {
+class MessageListenerAdapterTests {
 
 	private static final String TEXT = "I fancy a good cuppa right now";
 
@@ -65,12 +63,12 @@ public class MessageListenerAdapterTests {
 
 
 	@Test
-	public void testWithMessageContentsDelegateForTextMessage() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testWithMessageContentsDelegateForTextMessage() throws Exception {
+		TextMessage textMessage = mock();
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(textMessage);
@@ -79,20 +77,17 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForBytesMessage() throws Exception {
-		BytesMessage bytesMessage = mock(BytesMessage.class);
+	void testWithMessageContentsDelegateForBytesMessage() throws Exception {
+		BytesMessage bytesMessage = mock();
 		// BytesMessage contents must be unwrapped...
-		given(bytesMessage.getBodyLength()).willReturn(new Long(TEXT.getBytes().length));
-		given(bytesMessage.readBytes(any(byte[].class))).willAnswer(new Answer<Integer>() {
-			@Override
-			public Integer answer(InvocationOnMock invocation) throws Throwable {
-				byte[] bytes = (byte[]) invocation.getArguments()[0];
-				ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
-				return inputStream.read(bytes);
-			}
+		given(bytesMessage.getBodyLength()).willReturn(Long.valueOf(TEXT.getBytes().length));
+		given(bytesMessage.readBytes(any(byte[].class))).willAnswer((Answer<Integer>) invocation -> {
+			byte[] bytes = (byte[]) invocation.getArguments()[0];
+			ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
+			return inputStream.read(bytes);
 		});
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(bytesMessage);
@@ -101,11 +96,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForObjectMessage() throws Exception {
-		ObjectMessage objectMessage = mock(ObjectMessage.class);
+	void testWithMessageContentsDelegateForObjectMessage() throws Exception {
+		ObjectMessage objectMessage = mock();
 		given(objectMessage.getObject()).willReturn(NUMBER);
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(objectMessage);
@@ -114,11 +109,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
-		ObjectMessage objectMessage = mock(ObjectMessage.class);
+	void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
+		ObjectMessage objectMessage = mock();
 		given(objectMessage.getObject()).willReturn(OBJECT);
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(objectMessage);
@@ -127,10 +122,10 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageDelegate() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testWithMessageDelegate() throws Exception {
+		TextMessage textMessage = mock();
 
-		MessageDelegate delegate = mock(MessageDelegate.class);
+		MessageDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		// we DON'T want the default SimpleMessageConversion happening...
@@ -141,8 +136,8 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
+		TextMessage textMessage = mock();
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
@@ -152,8 +147,8 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
+		TextMessage textMessage = mock();
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
@@ -164,11 +159,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() throws Exception {
+	void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() throws Exception {
 		final IllegalArgumentException exception = new IllegalArgumentException();
 
-		TextMessage textMessage = mock(TextMessage.class);
-		MessageDelegate delegate = mock(MessageDelegate.class);
+		TextMessage textMessage = mock();
+		MessageDelegate delegate = mock();
 		willThrow(exception).given(delegate).handleMessage(textMessage);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -189,7 +184,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() throws Exception {
+	void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
 		assertThat(adapter.getMessageConverter()).as("The default [MessageConverter] must never be null.").isNotNull();
 		boolean condition = adapter.getMessageConverter() instanceof SimpleMessageConverter;
@@ -197,21 +192,21 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() throws Exception {
+	void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
 		assertThat(adapter.getDelegate()).isSameAs(adapter);
 	}
 
 	@Test
-	public void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() throws Exception {
+	void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
 		assertThat(adapter.getDefaultListenerMethod()).isEqualTo(MessageListenerAdapter.ORIGINAL_DEFAULT_LISTENER_METHOD);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+	void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() throws Exception {
+		TextMessage textMessage = mock();
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(textMessage)).willReturn(TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
@@ -221,23 +216,23 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		Queue destination = mock(Queue.class);
-		TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		Queue destination = mock();
+		TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(
 				CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(null); // we want to fall back to the default...
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
+		TextMessage responseTextMessage = mock();
 
-		QueueSender queueSender = mock(QueueSender.class);
-		Session session = mock(Session.class);
+		QueueSender queueSender = mock();
+		Session session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(queueSender);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -256,22 +251,22 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		Queue destination = mock(Queue.class);
-		TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		Queue destination = mock();
+		TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(null);
 		given(sentTextMessage.getJMSMessageID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
-		MessageProducer messageProducer = mock(MessageProducer.class);
-		Session session = mock(Session.class);
+		TextMessage responseTextMessage = mock();
+		MessageProducer messageProducer = mock();
+		Session session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(messageProducer);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -289,18 +284,18 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		final TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		final TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(null);
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
-		final QueueSession session = mock(QueueSession.class);
+		TextMessage responseTextMessage = mock();
+		final QueueSession session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -318,24 +313,24 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
-		Queue destination = mock(Queue.class);
+	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
+		Queue destination = mock();
 
-		final TextMessage sentTextMessage = mock(TextMessage.class);
+		final TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
-		MessageProducer messageProducer = mock(MessageProducer.class);
+		TextMessage responseTextMessage = mock();
+		MessageProducer messageProducer = mock();
 		willThrow(new JMSException("Doe!")).given(messageProducer).send(responseTextMessage);
 
-		final QueueSession session = mock(QueueSession.class);
+		final QueueSession session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(messageProducer);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -354,11 +349,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() throws Exception {
-		final TextMessage message = mock(TextMessage.class);
-		final QueueSession session = mock(QueueSession.class);
+	void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() throws Exception {
+		final TextMessage message = mock();
+		final QueueSession session = mock();
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		willThrow(new IllegalArgumentException("Doe!")).given(delegate).handleMessage(message);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -372,10 +367,10 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
-		final TextMessage sentTextMessage = mock(TextMessage.class);
-		final Session session = mock(Session.class);
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+	void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+		final TextMessage sentTextMessage = mock();
+		final Session session = mock();
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -391,21 +386,21 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
-		Queue destination = mock(Queue.class);
-		final TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+		Queue destination = mock();
+		final TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseMessage = mock(TextMessage.class);
-		QueueSender queueSender = mock(QueueSender.class);
+		TextMessage responseMessage = mock();
+		QueueSender queueSender = mock();
 
-		Session session = mock(Session.class);
+		Session session = mock();
 		given(session.createProducer(destination)).willReturn(queueSender);
 
-		ResponsiveJmsTextMessageReturningMessageDelegate delegate = mock(ResponsiveJmsTextMessageReturningMessageDelegate.class);
+		ResponsiveJmsTextMessageReturningMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(responseMessage);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
